kubernetes/apps/selkies/desktop/app/deployment.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selkies-gstreamer
  namespace: desktop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: selkies-gstreamer
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: default/vpn-macvlan
      labels:
        app: selkies-gstreamer
    spec:
      runtimeClassName: nvidia
      containers:
        - name: glx
          image: ghcr.io/selkies-project/nvidia-glx-desktop:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: udp-one
              containerPort: 62001
              protocol: UDP
            - name: udp-two
              containerPort: 62002
              protocol: UDP
          resources:
            limits:
              memory: 8Gi
              cpu: "8"
              nvidia.com/gpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /cache
              name: selkies-volume
              subPath: cache
            - mountPath: /home/ubuntu
              name: selkies-volume
              subPath: home
            - mountPath: /mnt/public
              name: media-volume
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: selkies-volume
          persistentVolumeClaim:
            claimName: selkies-claim
        - name: media-volume
          persistentVolumeClaim:
            claimName: nfs-claim
